# grand-line-examples

./: .gitignore  Cargo.toml  Makefile  README.md  dprint.json
erp/: Cargo.toml
erp/src/: config.rs  main.rs
erp/src/context/: auth_context.rs  authenticate.rs  mod.rs
erp/src/custom_scalars/: email.rs  mod.rs  password.rs
erp/src/libs/: mod.rs
erp/src/libs/helpers/: auth_qs.rs  mod.rs
erp/src/libs/utils/: cookie.rs  hash_password.rs  mod.rs
erp/src/routers/: graphql_layer.rs  graphql_router.rs  mod.rs
erp/src/schema/: db.rs  mod.rs  schema.rs
erp/src/schema/authenticate/: create_user.rs  login.rs  login_session.rs  mod.rs  search_user.rs  user.rs
erp/src/schema/authorize/: mod.rs  org.rs
erp/src/schema/industry/: business_model.rs  industry.rs  mod.rs
relation/: Cargo.toml
relation/src/: main.rs
relation/src/db/: db.rs
relation/src/graphql/: mod.rs  schema.rs
relation/src/graphql/org/: mod.rs  org.rs  org_search.rs  user_in_org.rs
relation/src/graphql/todo/: todo.rs  todo_search.rs
relation/src/graphql/user/: mod.rs  user.rs  user_search.rs
relation/src/schema/: db.rs  mod.rs  schema.rs
relation/src/schema/todo/: mod.rs  todo_search.rs
relation/src/schema/user/: user.rs
saas/: Cargo.toml
saas/models/: Cargo.toml  lib.rs
saas/src/: main.rs
saas/src/schema/: mod.rs  schema.rs
saas/src/schema/todo/: mod.rs  todo_create.rs  todo_delete.rs  todo_detail.rs  todo_model.rs  todo_search.rs  todo_search_2024.rs  todo_update.rs
saas/src/schema/user/: mod.rs  user_model.rs  user_search.rs
saas/src/schema/utils/: pagination.rs
simple-todo/: Cargo.toml
simple-todo/src/: main.rs
simple_todo/: Cargo.toml
simple_todo/src/: main.rs
