[package]
name = "grand-line-examples-simple-todo"
version = "0.0.0"
edition = "2024"

[dependencies]
grand-line = { path = "../../grand-line", default-features = false, features = ["re_exports", "axum", "sqlite"] }
serde = { version = "1.0.219", default-features = false, features = ["derive", "std"] }
